
Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Improved Speccy online browser: now uses ZXinfo API V3

Improved all-to-pixel text rendering: 
-Allow 1:1 scale
-Allow to set window size and offsets in characters

Fixed annoying flickering in menu using XWindows video driver
Fixed loading General Sound rom
Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks
Fixed pixel color on text all-to-pixel text rendering (color inversion)
Fixed downloads from spectrumcomputing
Fixed DivIDE/DivMMC mapram behaviour

Fixed IDE commands which affected allmost all IDE firmware: fatware, mdos, etc:
-Fixed IDE command ECH Identify Drive
-Fixed IDE command 91H Initialize Drive Parameters 

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request
-Fixed RETURN key

Fixed TBBlue bugs:
-Fixed relative sprites when anchor sprite is not visible
-Fixed relative sprites and negative coordinates
-Fixed relative unified sprites
-Fixed writing on divmmc memory when layer2 active
-Fixed detecting unified/composite sprites
-Fixed calculating pattern on 4 bpp sprites
-Fixed 4bpp sprites transparency
-Fixed anchor on 4-byte sprites
-Fixed clipping (affected scrollnutter in the right round corners)




Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots